RESOLVED FIXED47931
[Qt] Fix layoutTestController.getJsObjectCount
https://bugs.webkit.org/show_bug.cgi?id=47931
Summary [Qt] Fix layoutTestController.getJsObjectCount
Robert Hogan
Reported 2010-10-19 14:02:18 PDT
Qt Bridge doesn't know size_t so pass result as unsigned int. Unskip fast/dom/gc-10.html
Attachments
Patch (3.08 KB, patch)
2010-10-19 14:03 PDT, Robert Hogan
no flags
Robert Hogan
Comment 1 2010-10-19 14:03:57 PDT
Antonio Gomes
Comment 2 2010-10-19 20:09:55 PDT
Comment on attachment 71201 [details] Patch Please make it just 'unsigned'.
WebKit Commit Bot
Comment 3 2010-10-20 12:49:42 PDT
Comment on attachment 71201 [details] Patch Clearing flags on attachment: 71201 Committed r70164: <http://trac.webkit.org/changeset/70164>
WebKit Commit Bot
Comment 4 2010-10-20 12:49:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.