2010-10-20  Robert Hogan  <robert@webkit.org>

Reviewed by Antonio Gomes.

        [Qt] Fix layoutTestController.getJsObjectCount

        Qt Bridge doesn't know size_t so pass result as unsigned int.

        Unskip fast/dom/gc-10.html

        https://bugs.webkit.org/show_bug.cgi?id=47931

        * platform/qt/Skipped:
2010-10-20  Robert Hogan  <robert@webkit.org>

        Reviewed by Antonio Gomes.

        [Qt] Fix layoutTestController.getJsObjectCount

        Qt Bridge doesn't know size_t so pass result as unsigned int.

        Unskip fast/dom/gc-10.html

        https://bugs.webkit.org/show_bug.cgi?id=47931

        * DumpRenderTree/qt/GCControllerQt.cpp:
        (GCController::getJSObjectCount):
        * DumpRenderTree/qt/GCControllerQt.h:

Canonical link: https://commits.webkit.org/60715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70164 268f45cc-cd09-0410-ab3c-d52691b4dbfc