WebKitTools/DumpRenderTree/qt/GCControllerQt.cpp
@@ -48,7 +48,7 @@ void GCController::collectOnAlternateThread(bool waitUntilDone) const
     DumpRenderTreeSupportQt::garbageCollectorCollectOnAlternateThread(waitUntilDone);
 }
 
-size_t GCController::getJSObjectCount() const
+unsigned int GCController::getJSObjectCount() const
 {
     return DumpRenderTreeSupportQt::javaScriptObjectsCount();
 }
